changed all photos to use webp images.

--- a/frontend/src/styles/AccountRegister.css
+++ b/frontend/src/styles/AccountRegister.css
@@ -2,7 +2,7 @@
 .account-register-container {
     position: relative;
     text-align: center;
-    background-image: url("../staticimages/rockstarslogowhite.png");
+    background-image: url("../staticimages/rockstarslogowhite.webp");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
