--- a/frontend/src/styles/Gallery.css
+++ b/frontend/src/styles/Gallery.css
@@ -3,7 +3,7 @@
 .gallery-container {
     position: relative;
     text-align: center;
-    background-image: url("../staticimages/rockstarslogowhite.png");
+    background-image: url("../staticimages/rockstarslogowhite.webp");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
