--- a/frontend/src/styles/RaceList.css
+++ b/frontend/src/styles/RaceList.css
@@ -10,7 +10,7 @@
 .races-container {
     position: relative;
     text-align: center;
-    background-image: url("../staticimages/rockstarslogowhite.png");
+    background-image: url("../staticimages/rockstarslogowhite.webp");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
