--- a/frontend/src/styles/About.css
+++ b/frontend/src/styles/About.css
@@ -1,7 +1,7 @@
 .about-container {
     position: relative;
     text-align: center;
-    background-image: url("../staticimages/rockstarslogowhite.png");
+    background-image: url("../staticimages/rockstarslogowhite.webp");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
