--- a/frontend/src/styles/HeroSection.css
+++ b/frontend/src/styles/HeroSection.css
@@ -21,7 +21,7 @@
     left: 0;
     width: 200%;
     height: 100%;
-    background: url("../staticimages/checkerflagscroll.png") repeat-x;
+    background: url("../staticimages/checkerflagscroll.webp") repeat-x;
     background-size: contain;
     animation: scrollFlag 120s linear infinite;
     z-index: 0;
