--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -4,7 +4,7 @@
 .home-container {
     position: relative;
     text-align: center;
-    background-image: url("../staticimages/rockstarslogowhite.png");
+    background-image: url("../staticimages/rockstarslogowhite.webp");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
